# gossan

./: .gitignore  AUDIT_REPORT.md  BENCH_RESULTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  E2E_VALIDATION.md  GOSSAN_LEGENDARY.md  KIMI_DEEP_AUDIT.md  LICENSE-APACHE  README.md  SECURITY.md  STANDALONE_CHECK.md  deny.toml  gossan-scan.portscan-resume.json  rust-toolchain.toml  todos.md
crates/checkpoint/: Cargo.toml  README.md
crates/checkpoint/src/: lib.rs
crates/checkpoint/tests/: all_stages_roundtrip.rs  atomicity.rs  test_legendary_adversarial.rs  test_legendary_gap.rs  test_legendary_property.rs  test_legendary_unit.rs
crates/classify/: Cargo.toml  README.md
crates/classify/rules/: builtin.toml
crates/classify/src/: classifier.rs  lib.rs  matcher.rs  rules.rs
crates/classify/tests/: classify_precision_truth.rs  custom_rules_toml.rs  extended_rules.rs  perf_gate.rs  property.rs  wave9_edge.rs  wave9_proptest.rs
crates/cli/: Cargo.toml  README.md  gossan-scan.portscan-resume.json
crates/cli/src/: args.rs  main.rs  output.rs  pipeline.rs
crates/cli/tests/: cascade_wiring.rs  cli_per_flag.rs  json_schema.rs  no_secrets_in_repo.rs  output_formats.rs  pipeline_e2e.rs  sarif_schema.rs  security_path_traversal.rs  stdin_target.rs  vuln_app_e2e.rs
crates/cloud/: Cargo.toml  README.md
crates/cloud/rules/: azure.toml  do_spaces.toml  permutations.toml
crates/cloud/src/: apigateway.rs  azure.rs  cloudfront.rs  common.rs  do_spaces.rs  gcs.rs  inside_out.rs  integration_tests.rs  lambda.rs  lib.rs  permutations.rs  provider.rs  s3.rs
crates/cloud/tests/: permutations_coverage.rs  test_cloud_adversarial_gcp_do.rs  test_cloud_adversarial_network.rs  test_cloud_adversarial_s3_azure.rs  test_legendary_adversarial.rs  test_legendary_gap.rs  test_legendary_property.rs  test_legendary_unit.rs  xml_listing_truth.rs
crates/core/: Cargo.toml  README.md
crates/core/src/: accuracy.rs  config.rs  dedup.rs  domain.rs  error.rs  finding.rs  hashing.rs  lib.rs  net.rs  ratelimit.rs  scanclient_bridge.rs  scanner.rs  target.rs  testkit.rs  tierb.rs  transport.rs
crates/core/tests/: config_defaults.rs  no_bespoke_finding_types_in_public_api.rs  scan_input.rs  target_roundtrip.rs  test_legendary_adversarial_config.rs  test_legendary_adversarial_net.rs  test_legendary_adversarial_ratelimit.rs  test_legendary_adversarial_target.rs  test_legendary_gap_ratelimit.rs  test_legendary_proptest_target.proptest-regressions  test_legendary_proptest_target.rs  test_legendary_unit_config.rs  test_legendary_unit_ratelimit.rs  test_legendary_unit_scanner.rs  test_legendary_unit_target.rs  try_push_finding.rs
crates/correlation/: Cargo.toml  README.md
crates/correlation/examples/: test_fixes.rs
crates/correlation/src/: confidence.rs  dedup.rs  lib.rs  relationship.rs  utils.rs
crates/correlation/tests/: admin_exposed_chain.rs  adversarial_targets.rs  per_rule_smoke.rs  perf_huge_input.rs  tls_weakness_chain.rs
crates/crawl/: Cargo.toml  README.md
crates/crawl/src/: extract.rs  lib.rs  seeds.rs
crates/crawl/tests/: parsers.rs  seeds_deep_truth.rs
crates/dns/: Cargo.toml  README.md
crates/dns/rules/: dkim_selectors.toml  mail_providers.toml  ns_providers.toml
crates/dns/src/: axfr.rs  dnssec.rs  email.rs  lib.rs  posture.rs  resolver.rs  takeover.rs  takeover_http_fingerprints.toml  takeovers.txt
crates/dns/tests/: break_it.rs  competitor_dnsx.rs  dmarc_analysis_truth.rs  spf_parser.rs
crates/engine/: Cargo.toml  README.md
crates/engine/benches/: tx_hot_loop.rs
crates/engine/scripts/: vs_masscan.sh
crates/engine/src/: icmp_backoff.rs  lib.rs  probe.rs  rate.rs  scan.rs  schedule.rs
crates/engine/tests/: perf_gate.rs  realnet_loopback.rs
crates/fleet/: Cargo.toml  README.md  build.rs
crates/fleet/proto/: fleet.proto
crates/fleet/src/: lib.rs  master.rs  observability.rs  worker.rs
crates/fleet/tests/: break_it.rs  master_basic.rs
crates/graph/: Cargo.toml  README.md  test_sqli.db-shm  test_sqli.db-wal  test_temporal.db-shm  test_temporal.db-wal  test_temporal_int.db-shm  test_temporal_int.db-wal
crates/graph/src/: edge.rs  lib.rs  node.rs  query.rs  schema.rs
crates/graph/tests/: all_backends_roundtrip.rs  backend_idempotency_contract.rs  concurrent_writes.rs  perf_gate.rs  property.proptest-regressions  property.rs  schema_migration.rs  test_legendary_adversarial.rs  test_legendary_deser.rs  test_legendary_gap.rs  test_legendary_more.rs  test_legendary_property.rs  test_legendary_unit.rs
crates/headless/: Cargo.toml  README.md
crates/headless/src/: lib.rs
crates/hidden/: Cargo.toml  README.md
crates/hidden/data/: checks.toml  tier_b_wordlist.txt
crates/hidden/rules/: api_shadow_paths.toml  api_version_paths.txt  backup_files.toml  bypass403_headers.toml  bypass403_sensitive_paths.txt  csp_script_values.toml  debug_probes.toml  dependency_manifests.toml  error_disclosure.toml  git_env_checks.toml  graphql_paths.txt  methods_probe_paths.txt  oauth_auth_endpoint_paths.txt  oauth_oidc_discovery_paths.txt  rate_limit_auth_paths.txt  swagger_paths.txt
crates/hidden/src/: api_versions.rs  backup_files.rs  bypass403.rs  cookies.rs  cors.rs  csp.rs  debug_endpoints.rs  debug_probes.toml  dependency_confusion.rs  directory_brute.rs  directory_wordlist.txt  error_disclosure.rs  favicon.rs  git_env.rs  graphql.rs  lib.rs  methods.rs  oauth.rs  path_sanitize.rs  rate_limit.rs  robots.rs  security_headers.rs  sitemap.rs  soft404.rs  swagger.rs  tech_probes.rs  waf.rs
crates/horizontal/: Cargo.toml  README.md
crates/intel/: Cargo.toml  README.md
crates/js/: Cargo.toml  README.md
crates/keyhog-lite/: Cargo.toml  README.md
crates/origin/: .gitignore  Cargo.toml  README.md
crates/portscan/: CHANGELOG.md  Cargo.toml  DEEP_AUDIT.md  README.md  gossan-scan.portscan-resume.json
crates/scm/: Cargo.toml  README.md
crates/secret-verify/: Cargo.toml
crates/stealthreq/: Cargo.toml  README.md
crates/subdomain/: Cargo.toml  README.md
crates/synscan/: Cargo.toml  README.md
crates/techstack/: Cargo.toml  README.md
(+384 files in other folders)
