[workspace]
members = [
    "crates/core",
    "crates/subdomain",
    "crates/portscan",
    "crates/techstack",
    "crates/dns",
    "crates/js",
    "crates/hidden",
    "crates/cloud",
    "crates/correlation",
    "crates/checkpoint",
    "crates/cli", "crates/synscan", "crates/headless",
    "crates/crawl", "crates/origin",
]
default-members = ["crates/cli"]
resolver = "2"

[workspace.package]
version      = "0.2.0"
edition      = "2021"
authors      = ["Santh <hello@santh.io>"]
license      = "MIT"
repository   = "https://github.com/santhsecurity/gossan"
homepage     = "https://github.com/santhsecurity/gossan"
documentation= "https://docs.rs/gossan"
keywords     = ["security", "recon", "attack-surface", "pentest", "scanner"]
categories   = ["command-line-utilities", "network-programming"]
rust-version = "1.80"

[workspace.dependencies]
tokio        = { version = "1", features = ["full"] }
async-trait  = "0.1"
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
thiserror    = "1"
anyhow       = "1"
tracing      = "0.1"
url          = { version = "2", features = ["serde"] }
upstream_reqwest = { package = "reqwest", version = "0.12.24", default-features = false, features = ["rustls-tls", "json", "gzip", "brotli", "deflate", "socks"] }
futures      = "0.3"
indicatif    = { version = "0.17", features = ["rayon"] }
governor     = "0.6"
nonzero_ext  = "0.3"
regex        = "1"
chrono       = { version = "0.4", features = ["serde"] }
uuid         = { version = "1", features = ["v4", "serde"] }
hickory-resolver = "0.24"
tokio-rustls    = "0.26"
rustls          = { version = "0.23", features = ["ring"] }
x509-cert       = "0.2"
sha2            = "0.10"
clap         = { version = "4", features = ["derive", "env"] }
base64       = "0.22"
hex          = "0.4"
rusqlite     = { version = "0.32", features = ["bundled"] }
secfinding = ">=0.2.0, <0.3.0"
santh-output  = { version = "0.2.1", package = "secreport" }
scantarget = "0.2.1"
scanclient = "0.2.0"
codewalk = "0.2.0"
multimatch = "0.2.0"
scanstate = "0.2.0"
