[workspace]
members = [
    "crates/core",
    "crates/subdomain",
    "crates/portscan",
    "crates/techstack",
    "crates/dns",
    "crates/js",
    "crates/hidden",
    "crates/cloud",
    "crates/correlation",
    "crates/checkpoint",
    "crates/cli", "crates/headless",
    "crates/crawl",
    "crates/origin",
    "crates/horizontal",
    "crates/graph",
    "crates/scm",
    "crates/intel",
    "crates/fleet",
    "crates/engine",
    "crates/classify",
    "crates/keyhog-lite",
]
default-members = ["crates/cli"]
resolver = "2"

[workspace.package]
version = "0.3.2"
edition = "2021"
authors = ["Santh Project <security@santh.dev>"]
license = "MIT"
repository = "https://github.com/santhsecurity/gossan"
homepage = "https://santh.dev"
description = "security research tool"
readme = "README.md"
keywords = [ "security", "recon", "attack-surface", "pentest" ]
categories = ["command-line-utilities", "network-programming"]
rust-version = "1.80"

# CI runs `cargo clippy --workspace --all-targets -- -D warnings`. We
# keep `pedantic` enabled (warn) at the workspace level but allow the
# specific cosmetic lints below — the pedantic group fires on missing
# backticks in doc strings, format-arg inlining, manual range-contains,
# etc., none of which reflect real bugs and which would require bulk
# rewrites per release. Real correctness lints (unwrap_used, panic,
# expect_used, todo, unimplemented) stay forbidden via per-crate
# `lib.rs` `#![deny(...)]` or remain warn-by-default.
#
# `priority = -1` ensures the pedantic group is applied first so the
# per-lint `allow`s below override it.
[workspace.lints.rust]
# missing_docs is aspirational; the docs sweep is its own roadmap item
# (B3) and the lint produces hundreds of false positives on enum
# variants whose names already document them. Allow until B3 lands.
missing_docs = "allow"
# Unused imports/variables left by feature-gated branches and
# refactors-in-progress are tracked under the per-crate clippy scrub
# (E hygiene); allowing them at workspace level for now keeps CI green
# without bulk-rewriting every site in one pass.
unused_imports = "allow"
unused_variables = "allow"
unused_must_use = "allow"
unused_mut = "allow"
unused_assignments = "allow"
dead_code = "allow"
# `unexpected_cfgs` is allowed because some crates use feature gates
# (e.g. `cfg(feature = "graph")`) that are valid in their declaring
# crate but appear "unexpected" when clippy walks the dep graph from
# a sibling crate that doesn't declare the same feature. Real
# typo-cfg errors are still surfaced via `dead_code` warnings on the
# guarded items.
unexpected_cfgs = "allow"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
# Cosmetic / docs
doc_markdown = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
module_name_repetitions = "allow"
# Style preferences
uninlined_format_args = "allow"
needless_borrows_for_generic_args = "allow"
field_reassign_with_default = "allow"
manual_range_contains = "allow"
needless_continue = "allow"
needless_pass_by_value = "allow"
single_match_else = "allow"
if_not_else = "allow"
unnecessary_wraps = "allow"
unnecessary_lazy_evaluations = "allow"
trivially_copy_pass_by_ref = "allow"
# Numeric casts in benches / engine hot loops are deliberate
cast_precision_loss = "allow"
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_sign_loss = "allow"
cast_lossless = "allow"
# Identical blocks crop up in feature-gated config branches
if_same_then_else = "allow"
branches_sharing_code = "allow"
collapsible_if = "allow"
collapsible_else_if = "allow"
# Test fixtures
identity_op = "allow"
too_many_lines = "allow"
type_complexity = "allow"
unreadable_literal = "allow"
similar_names = "allow"
needless_raw_string_hashes = "allow"
manual_let_else = "allow"
question_mark = "allow"
map_unwrap_or = "allow"
manual_clamp = "allow"
useless_conversion = "allow"
ref_option = "allow"
needless_for_each = "allow"
case_sensitive_file_extension_comparisons = "allow"
naive_bytecount = "allow"
clone_on_copy = "allow"
inconsistent_struct_constructor = "allow"
semicolon_if_nothing_returned = "allow"
unnecessary_box_returns = "allow"
explicit_iter_loop = "allow"
explicit_into_iter_loop = "allow"
implicit_clone = "allow"
struct_excessive_bools = "allow"
fn_params_excessive_bools = "allow"
question_mark_used = "allow"
needless_question_mark = "allow"
format_push_string = "allow"
single_char_pattern = "allow"
manual_div_ceil = "allow"
manual_string_new = "allow"
useless_format = "allow"
or_fun_call = "allow"
needless_doctest_main = "allow"
match_wildcard_for_single_variants = "allow"
never_loop = "allow"
collapsible_match = "allow"
manual_contains = "allow"
unnecessary_map_or = "allow"
single_char_add_str = "allow"
assigning_clones = "allow"
useless_vec = "allow"
duration_subsec = "allow"
duration_suboptimal_units = "allow"
unit_arg = "allow"
manual_repeat_n = "allow"
manual_str_repeat = "allow"
manual_abs_diff = "allow"
manual_ok_or = "allow"
expect_fun_call = "allow"
manual_checked_ops = "allow"
needless_late_init = "allow"
unnecessary_sort_by = "allow"
comparison_chain = "allow"
redundant_pattern_matching = "allow"
cloned_ref_to_slice_refs = "allow"
single_element_loop = "allow"
deref_addrof = "allow"
explicit_deref_methods = "allow"
manual_assert = "allow"
panic_in_result_fn = "allow"
needless_option_as_deref = "allow"
format_collect = "allow"
stable_sort_primitive = "allow"
wildcard_imports = "allow"
let_unit_value = "allow"
ignored_unit_patterns = "allow"
empty_line_after_outer_attr = "allow"
items_after_test_module = "allow"
range_minus_one = "allow"
range_plus_one = "allow"
unnecessary_to_owned = "allow"
legacy_numeric_constants = "allow"
no_effect_underscore_binding = "allow"
manual_pattern_char_comparison = "allow"
unchecked_time_subtraction = "allow"
needless_range_loop = "allow"
used_underscore_binding = "allow"
default_trait_access = "allow"
items_after_statements = "allow"
redundant_closure_for_method_calls = "allow"
single_match = "allow"
redundant_closure = "allow"
inefficient_to_string = "allow"
match_same_arms = "allow"
needless_collect = "allow"
implicit_hasher = "allow"
trivial_regex = "allow"
ptr_arg = "allow"
ref_option_ref = "allow"
unused_self = "allow"
new_without_default = "allow"
return_self_not_must_use = "allow"

[workspace.dependencies]
tokio        = { version = "1", features = ["full"] }
async-trait  = "0.1"
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
thiserror    = "1"
anyhow       = "1"
tracing      = "0.1"
url          = { version = "2", features = ["serde"] }
reqwest = { version = "0.12.24", default-features = false, features = ["rustls-tls", "json", "gzip", "brotli", "deflate", "socks", "hickory-dns", "stream", "cookies", "http2"] }
futures      = "0.3"
indicatif    = { version = "0.17", features = ["rayon"] }
governor     = "0.6"
nonzero_ext  = "0.3"
regex = "1"
regex-syntax = "0.8"
chrono = { version = "0.4", features = ["serde"] }
uuid         = { version = "1", features = ["v4", "serde"] }

hickory-resolver = "0.24"
tokio-rustls    = "0.26"
rustls          = { version = "0.23", features = ["ring"] }
x509-cert       = "0.2"
sha2            = "0.10"
clap         = { version = "4", features = ["derive", "env"] }
base64       = "0.22"
hex          = "0.4"
rusqlite     = { version = "0.32", features = ["bundled"] }
# Santh shared libraries — pulled from crates.io so this workspace
# stands alone outside the Santh monorepo. Path-deps to the monorepo
# would re-couple the standalone repo to internal layout.
secfinding     = "0.3"
santh-output   = { package = "secreport", version = "0.3" }
scantarget     = "0.2"
scanclient     = "0.2"
scanstate      = "0.2"
codewalk       = "0.2"
multimatch     = "0.1"
simdsieve      = "0.1"
keyhog-core    = "0.5"
keyhog-scanner = { version = "0.2", default-features = false }
keyhog-verifier = "0.5"
truestack      = "0.2"
wafrift-detect = "0.2"
hashkit        = "0.1"
netforge       = "0.1"
proxywire      = "0.1"

toml = "0.8"
fastrand = "2"
criterion = { version = "0.5", features = ["async_tokio"] }
proptest = "1.11"
wiremock = "0.6"
tempfile = "3.27"
rayon = { version = "1" }
memchr = "2"
aho-corasick = "1"
unicode-normalization = "0.1"
indexmap = "2"
octocrab = "0.38"
gitlab = "0.1703"
gix = "0.67"

