[package]
name = "gossan"
version.workspace = true
edition.workspace = true
authors = ["Santh Project <contact@santh.dev>"]
license.workspace = true
homepage.workspace = true
repository = "https://github.com/santhsecurity/gossan"
description = "Fast, modular attack surface discovery — subdomains, ports, tech stack, secrets, hidden endpoints, cloud assets — part of the security research ecosystem"
readme.workspace = true
keywords.workspace = true
categories.workspace = true


[package.metadata.santh]
status = "alpha"
[[bin]]
name = "gossan"
path = "src/main.rs"

# ── Feature flags ──────────────────────────────────────────────────────────────
# Each scanner module is independently optional.
# Compile the minimal binary you need:
#
#   cargo build --no-default-features --features subdomain,techstack
#
# This produces a binary with only subdomain discovery + tech-stack scanning —
# no port scanner, no DNS audit, no JS analysis, no cloud enumeration compiled in.

[features]
default = [
    "subdomain", "portscan", "dns", "js", "crawl", "scm",
    "cloud", "correlation", "checkpoint",
    "headless", "origin", "horizontal", "graph", "intel", "fleet",
    "engine", "techstack", "hidden",
]
subdomain   = ["dep:gossan-subdomain"]
portscan    = ["dep:gossan-portscan"]
techstack   = ["dep:gossan-techstack"]
dns         = ["dep:gossan-dns"]
js          = ["dep:gossan-js"]
hidden      = ["dep:gossan-hidden"]
cloud       = ["dep:gossan-cloud", "gossan-cloud/cloud"]
correlation = ["dep:gossan-correlation"]
checkpoint  = ["dep:gossan-checkpoint"]
headless    = ["dep:gossan-headless"]
crawl       = ["dep:gossan-crawl"]
origin      = ["dep:gossan-origin"]
horizontal  = ["dep:gossan-horizontal"]
graph       = ["dep:gossan-graph", "gossan-graph/graph"]
scm         = ["dep:gossan-scm"]
intel       = ["dep:gossan-intel"]
fleet       = ["dep:gossan-fleet"]
engine      = ["dep:gossan-engine"]

[dependencies]
gossan-core = { version = "0.3", path = "../core" }
gossan-subdomain   = { version = "0.3", path = "../subdomain",   optional = true }
gossan-portscan    = { version = "0.3", path = "../portscan",    optional = true }
gossan-techstack   = { version = "0.3", path = "../techstack",   optional = true }
gossan-dns         = { version = "0.3", path = "../dns",         optional = true }
gossan-js          = { version = "0.3", path = "../js",          optional = true }
gossan-hidden      = { version = "0.3", path = "../hidden",      optional = true }
gossan-cloud       = { version = "0.3", path = "../cloud",       optional = true }
gossan-correlation = { version = "0.3", path = "../correlation", optional = true }
gossan-checkpoint  = { version = "0.3", path = "../checkpoint",  optional = true }
gossan-headless    = { version = "0.3", path = "../headless",    optional = true }
gossan-crawl       = { version = "0.3", path = "../crawl",       optional = true }
gossan-origin      = { version = "0.3", path = "../origin",      optional = true }
gossan-horizontal  = { version = "0.3", path = "../horizontal",  optional = true }
gossan-graph       = { version = "0.3", path = "../graph",       optional = true }
gossan-scm         = { version = "0.3", path = "../scm",         optional = true }
gossan-intel       = { version = "0.3", path = "../intel",       optional = true }
gossan-fleet       = { version = "0.3", path = "../fleet",       optional = true }
gossan-engine      = { version = "0.3", path = "../engine",      optional = true }

# Used at runtime to detect root (geteuid) so we can pick the
# masscan-class engine path automatically when privileges allow.
libc               = "0.2"

async-trait        = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
anyhow             = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tokio              = { workspace = true }
clap               = { workspace = true }
indicatif          = { workspace = true }
chrono             = { workspace = true }
uuid               = { workspace = true }
rustls             = { workspace = true }
santh-output       = { workspace = true }
secfinding         = { workspace = true }
scantarget         = { workspace = true }
scanclient         = { workspace = true }
hashkit            = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
# Used only in #[cfg(test)] fixtures that construct WebAssetTarget URLs;
# kept in dev-deps rather than promoting it to a regular dep.
url       = { workspace = true }
tempfile  = "3"
santh-output = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
