[package]
name    = "gossan-cloud"
version.workspace = true
edition.workspace = true
description      = "Cloud asset discovery scanner for gossan (S3, GCS, Azure Blob, DigitalOcean Spaces)"
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
gossan-core = { version = "0.2", path = "../core" }
async-trait = { workspace = true }
anyhow      = { workspace = true }
tracing     = { workspace = true }
tokio       = { workspace = true }
reqwest     = { workspace = true }
futures     = { workspace = true }
psl         = "2"
secfinding  = { workspace = true }
