[package]
name = "gossan-cloud"
version.workspace = true
edition.workspace = true
authors = ["Santh <contact@santh.io>"]
license.workspace = true
homepage = "https://santh.io"
repository.workspace = true
description = "Cloud asset discovery scanner for gossan (S3, GCS, Azure Blob, DigitalOcean Spaces) — part of the Santh security research ecosystem"
keywords.workspace = true
categories.workspace = true

[dependencies]
gossan-core = { version = "0.2", path = "../core" }
async-trait = { workspace = true }
anyhow      = { workspace = true }
tracing     = { workspace = true }
tokio       = { workspace = true }
upstream_reqwest = { workspace = true }
futures     = { workspace = true }
psl         = "2"
secfinding  = { workspace = true }
serde       = { workspace = true }
toml        = { workspace = true }
