[package]
name = "gossan-cloud"
version.workspace = true
edition.workspace = true
authors = ["Santh Project <contact@santh.dev>"]
license.workspace = true
homepage = "https://santh.dev"
repository = "https://github.com/santhsecurity/gossan"
description = "Cloud asset discovery scanner for gossan (S3, GCS, Azure Blob, DigitalOcean Spaces) — part of the security research ecosystem"
readme.workspace = true
keywords.workspace = true
categories.workspace = true


[package.metadata.santh]
status = "alpha"
[dependencies]
gossan-core = { version = "0.3", path = "../core" }
async-trait = { workspace = true }
anyhow      = { workspace = true }
tracing     = { workspace = true }
tokio       = { workspace = true }
reqwest = { workspace = true }
futures     = { workspace = true }
psl         = "2"
secfinding  = { workspace = true }
serde       = { workspace = true }
toml        = { workspace = true }
urlencoding = "2.1"

# AWS SDK dependencies for Inside-Out discovery
aws-config = { version = "1.1", optional = true }
aws-sdk-s3 = { version = "1.1", optional = true }
aws-sdk-ec2 = { version = "1.1", optional = true }
aws-sdk-route53 = { version = "1.1", optional = true }
aws-sdk-rds = { version = "1.1", optional = true }
aws-smithy-types = { version = "1.1", optional = true }

[features]
cloud = ["dep:aws-config", "dep:aws-sdk-s3", "dep:aws-sdk-ec2", "dep:aws-sdk-route53", "dep:aws-sdk-rds", "dep:aws-smithy-types"]

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
wiremock = "0.6"
gossan-core = { version = "0.3", path = "../core" }
proptest = "1.11.0"
# Used by tests/test_cloud_adversarial_network.rs to construct a
# resolver — production paths get one via ScanInput.resolver, tests
# need to build their own.
hickory-resolver = { workspace = true }

[lints]
workspace = true
