[package]
name = "gossan-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage = "https://santh.io"
repository.workspace = true
description = "Core types, traits, and shared networking utilities for the gossan attack-surface scanner — part of the Santh security research ecosystem"
readme = "../../README.md"
keywords = ["santh", "security", "recon", "attack-surface", "scanner", "networking"]
categories = ["command-line-utilities", "network-programming"]

[dependencies]
async-trait = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
thiserror   = { workspace = true }
anyhow      = { workspace = true }
tracing     = { workspace = true }
url         = { workspace = true }
futures     = { workspace = true }
chrono      = { workspace = true }
uuid        = { workspace = true }
tokio       = { workspace = true }
upstream_reqwest = { workspace = true }
governor    = { workspace = true }
nonzero_ext = { workspace = true }
secfinding = { workspace = true }
toml = "0.8"
proxywire = { path = "../../../../libs/runtime/proxywire" }
