[package]
name = "gossan-core"
# Pinned (not `version.workspace`) so path consumers (karyx) don't inherit 0.1.0.
version = "0.3.2"
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage = "https://santh.dev"
repository = "https://github.com/santhsecurity/gossan"
description = "Core types, traits, and shared networking utilities for the gossan attack-surface scanner — part of the security research ecosystem"
readme = "../../README.md"
keywords = [ "security", "recon", "attack-surface", "scanner" ]
categories = ["command-line-utilities", "network-programming"]


[package.metadata.santh]
status = "alpha"
[dependencies]
async-trait = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
thiserror   = { workspace = true }
anyhow      = { workspace = true }
tracing     = { workspace = true }
url         = { workspace = true, features = ["serde"] }
uuid        = { workspace = true }
# Path pin: karyx and other web workspaces pull gossan-core without gossan's
# workspace root when bogon/authjar bridge to the monorepo root (W6-F002).
hashkit     = { path = "../../../../libs/performance/indexing/hashkit" }
chrono      = { workspace = true }
tokio       = { workspace = true }
scanclient = { path = "../../../../libs/scanner/scanclient" }
futures      = { workspace = true }
governor    = { workspace = true }
nonzero_ext = { workspace = true }
secfinding = { workspace = true }
toml = "0.8"
proxywire = { path = "../../../../libs/runtime/proxywire" }
# Karyx/reqwest unify on 0.25 via `hickory-dns`; 0.24's `TokioAsyncResolver::tokio` is gone (W6-F012).
hickory-resolver = { version = "0.25", default-features = false, features = ["tokio", "system-config"] }
idna        = "1"
psl         = "2"

[dev-dependencies]
proptest = {workspace = true}
tempfile = "3.27.0"
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
wiremock = {workspace = true}

[lints]
workspace = true
