[package]
name = "gossan-correlation"
version.workspace = true
edition.workspace = true
authors = ["Santh <contact@santh.io>"]
license.workspace = true
homepage = "https://santh.io"
repository.workspace = true
description = "Cross-module finding correlation engine for gossan (attack chain detection) — part of the Santh security research ecosystem"
keywords.workspace = true
categories.workspace = true

[dependencies]
gossan-core = { version = "0.2", path = "../core" }
tracing     = { workspace = true }
secfinding  = { workspace = true }
