[package]
name = "gossan-crawl"
version.workspace = true
edition.workspace = true
description = "Authenticated web crawler — form extraction, parameter discovery, link following"
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
gossan-core = { version = "0.2", path = "../core" }
async-trait = "0.1"
futures = "0.3"
stealthreq = { workspace = true }
scraper = "0.22"
tracing = "0.1"
url = "2"
anyhow = "1"
