[package]
name = "gossan-crawl"
version.workspace = true
edition.workspace = true
authors = ["Santh Project <security@santh.dev>"]
license.workspace = true
homepage = "https://santh.dev"
repository = "https://github.com/santhsecurity/gossan"
description = "Authenticated web crawler — form extraction, parameter discovery, link following — part of the security research ecosystem"
readme.workspace = true
keywords.workspace = true
categories.workspace = true


[package.metadata.santh]
status = "alpha"
[dependencies]
gossan-core = { version = "0.3", path = "../core" }
async-trait = "0.1"
futures = "0.3"
reqwest = { workspace = true }
scraper = "0.22"
tracing = "0.1"
url = "2"
anyhow = "1"
tokio = { workspace = true }
runtime-headless = { path = "../../../../libs/runtime/headless" }
gossan-js = { version = "0.3", path = "../js" }
secfinding = { workspace = true }

[lints]
workspace = true
