[package]
name = "gossan-dns"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage = "https://santh.dev"
repository = "https://github.com/santhsecurity/gossan"
description = "DNS security scanner — SPF/DMARC/DKIM email auth, zone transfer (AXFR), subdomain takeover, CAA/NS posture — part of the security research ecosystem"
readme = "../../README.md"
keywords = [ "security", "dns", "dmarc", "spf" ]
categories = ["command-line-utilities", "network-programming"]


[package.metadata.santh]
status = "alpha"
[features]
default  = ["email", "axfr", "takeover", "posture", "dnssec"]
## SPF + DMARC + DKIM email authentication auditing.
## Recursive SPF include resolution, DMARC policy analysis, DKIM selector probing.
email    = []
## DNS zone transfer (AXFR) detection with wire-protocol parsing.
axfr     = []
## Subdomain takeover detection via dangling CNAME, NS, and MX records.
takeover = []
## DNS posture: CAA certificate restrictions, NS resilience, MX enumeration.
posture  = []
## DNSSEC validation and zone walking (NSEC/NSEC3) detection.
dnssec   = []

[dependencies]
gossan-core      = { version = "0.3", path = "../core" }
async-trait      = { workspace = true }
anyhow           = { workspace = true }
tracing          = { workspace = true }
tokio            = { workspace = true }
futures          = { workspace = true }
hickory-resolver = { workspace = true }
secfinding       = { workspace = true }
serde            = { workspace = true }
toml             = { workspace = true }
fastrand         = "2.0"

[lints]
workspace = true
