[package]
name = "gossan-graph"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Graph persistence for Gossan — stores targets and findings in a local SQLite database"
repository = "https://github.com/santhsecurity/gossan"
readme.workspace = true
keywords.workspace = true
categories.workspace = true


[package.metadata.santh]
status = "alpha"
[dependencies]
rusqlite    = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
thiserror   = { workspace = true }
anyhow      = { workspace = true }
tracing     = { workspace = true }
uuid        = { workspace = true, features = ["v5"] }
gossan-core = { path = "../core" }
secfinding  = { workspace = true }
chrono      = { workspace = true }
regex       = { workspace = true }
url         = { workspace = true }

[features]
default = ["graph"]
graph = []

[dev-dependencies]
tokio       = { workspace = true, features = ["full", "macros"] }
fastrand    = { workspace = true }
proptest = "1.11.0"
tempfile = "3.27.0"

[lints]
workspace = true
